# wayland-wire

./: .gitignore  README.md  default.nix  shell.nix  wayland-pure.cabal  wayland-wire.cabal
cbits/: cmsg.c
include/: cmsg.h
src/Graphics/: Wayland.hs
src/Graphics/Wayland/: Dispatch.hs  ObjectManager.hs  Protocol.hs  TH.hs  Test.hs  Types.hs  W.hs  Wire.hs
src/Graphics/Wayland/Wire/: Debug.hs  Decoder.hs  Encode.hs  Get.hs  Message.hs  Msg.chs  Put.hs  Raw.hs  Socket.hs
src/Network/Socket/: Msg.chs
tests/: test.hs  test.xml
tests/Test/: Api.hs  Arbitrary.hs  Decoder.hs  Encode.hs  Fd.hs  Get.hs  Message.hs  Msg.hs  Socket.hs
tests/Test/Api/: Client.hs  Gen.hs  Server.hs
