name:                wayland-pure
version:             0.1.0.0
synopsis:            Haskell implementation of the Wayland protocol
description:
    Implements the Wayland protocol in Haskell
license:             GPL
license-file:        LICENSE
author:              Sivert Berg
maintainer:          Sivert Berg <code@trev.is>
copyright:           Copyright (C) 2014 Sivert Berg
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:      Graphics.Wayland.Protocol
                        Graphics.Wayland.Types
                        Graphics.Wayland.Dispatch
                        Graphics.Wayland.Wire
                        Graphics.Wayland.TH
  other-modules:        Graphics.Wayland.Wire.Message
                        Graphics.Wayland.Wire.Socket
                        Graphics.Wayland.Wire.Decoder
                        Graphics.Wayland.Wire.Get
                        Graphics.Wayland.Wire.Put
                        Graphics.Wayland.Wire.Encode
                        Graphics.Wayland.Wire.Raw
  build-depends:        base >=4.7, unix, hxt, binary, bytestring,
                        network, network-msg >= 0.4, utf8-string,
                        free, mtl, transformers, template-haskell
  hs-source-dirs:       src/
  default-language:     Haskell2010
  ghc-options:          -Wall

test-suite test
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  main-is:              test.hs
  hs-source-dirs:       tests src
  ghc-options:          -Wall -fhpc
  build-depends:        base >=4.7, unix, hxt, binary, bytestring,
                        network, network-msg >= 0.4, utf8-string,
                        free, mtl, transformers, template-haskell,
                        QuickCheck
