name:                wayland-wire
version:             0.1.0
synopsis:            Haskell implementation of the Wayland wire protocol
description:
    Implements the Wayland wire protocol in Haskell.
license:             GPL-3
license-file:        LICENSE
author:              Sivert Berg
maintainer:          Sivert Berg <code@trev.is>
copyright:           Copyright (C) 2014 Sivert Berg
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:      Graphics.Wayland
                        Graphics.Wayland.Protocol
                        Graphics.Wayland.Types
                        Graphics.Wayland.Dispatch
                        Graphics.Wayland.Wire
                        Graphics.Wayland.W
  other-modules:        Graphics.Wayland.TH
                        Graphics.Wayland.Wire.Message
                        Graphics.Wayland.Wire.Socket
                        Graphics.Wayland.Wire.Debug
                        Graphics.Wayland.Wire.Decoder
                        Graphics.Wayland.Wire.Get
                        Graphics.Wayland.Wire.Put
                        Graphics.Wayland.Wire.Encode
                        Graphics.Wayland.Wire.Raw
                        Network.Socket.Msg
  other-extensions:     CPP
                        DeriveFunctor
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GeneralizedNewtypeDeriving
                        ImpredicativeTypes
                        IncoherentInstances
                        MultiParamTypeClasses
                        Rank2Types
                        StandaloneDeriving
                        TemplateHaskell
                        TupleSections
                        TypeFamilies
                        UndecidableInstances
  build-depends:        base >=4.7,
                        unix,
                        hxt,
                        binary,
                        bytestring,
                        network,
                        utf8-string,
                        free,
                        mtl >= 2.2.1,
                        transformers,
                        template-haskell,
                        containers,
                        diet-set,
                        th-lift,
                        directory
  include-dirs:         include
  includes:             cmsg.h
  c-sources:            cbits/cmsg.c
  build-tools:          c2hs
  hs-source-dirs:       src/
  default-language:     Haskell2010
  ghc-options:          -Wall

test-suite test
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  main-is:              test.hs
  other-modules:        Network.Socket.Msg
                        Test.Api
                        Test.Api.Client
                        Test.Api.Server
                        Test.Api.Gen
                        Test.Arbitrary
                        Test.Decoder
                        Test.Encode
                        Test.Fd
                        Test.Get
                        Test.Msg
                        Test.Message
                        Test.Socket
  include-dirs:         include
  includes:             cmsg.h
  c-sources:            cbits/cmsg.c
  hs-source-dirs:       tests src
  ghc-options:          -fomit-interface-pragmas
  ghc-prof-options:     -fprof-auto
  other-extensions:     CPP
                        DeriveFunctor
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GeneralizedNewtypeDeriving
                        ImpredicativeTypes
                        IncoherentInstances
                        MultiParamTypeClasses
                        Rank2Types
                        StandaloneDeriving
                        TemplateHaskell
                        TupleSections
                        TypeFamilies
                        UndecidableInstances
  build-depends:        base >=4.7,
                        unix,
                        hxt,
                        binary,
                        bytestring,
                        network,
                        utf8-string,
                        free,
                        mtl >= 2.2.1,
                        transformers,
                        template-haskell,
                        containers,
                        diet-set,
                        th-lift,
                        directory,
                        QuickCheck
